--- a/admin/config.yml
+++ b/admin/config.yml
@@ -16,3 +16,10 @@ collections:
       - {label: "Price", name: "price", widget: "string"}
       - {label: "Description", name: "body", widget: "markdown"}
       - {label: "Image", name: "image", widget: "image"}
+    slug: "{{slug}}"
+    fields:
+      - {label: "Part Name", name: "title", widget: "string"}
+      - {label: "Price", name: "price", widget: "string"}
+      - {label: "Description", name: "body", widget: "markdown"}
+      - {label: "Image", name: "image", widget: "image"}
+
