--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,15 +2,18 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: "images"
-public_folder: "/images"
+media_folder: "images/uploads"
+public_folder: "/images/uploads"
 
 collections:
   - name: "parts"
     label: "Auto Parts"
-    folder: "parts"
+    folder: "content/parts"
     create: true
+    slug: "{{slug}}"
     fields:
-      - {label: "Part Name", name: "title", widget: "string"}
-      - {label: "Price", name: "price", widget: "string"}
-      - {label: "Image", name: "image", widget: "image"}
+      - { label: "Part Name", name: "title", widget: "string" }
+      - { label: "Price", name: "price", widget: "string" }
+      - { label: "Brand", name: "brand", widget: "select", options: ["Toyota", "Mercedes", "BMW", "Honda", "Nissan", "Other"] }
+      - { label: "Featured Image", name: "image", widget: "image" }
+      - { label: "Description", name: "body", widget: "markdown" }
